# DSA

./: .gitignore  CMakeLists.txt  README.md
Array/: DynamicArray.c  dynamicArray.h
ArrayImplementation/Searching/: binarySearch.c  linearSearch.c
ArrayImplementation/Sorting/: bubbleSort.c  countingSort.c  insertionSort.c  radixSort.c  selectionSort.c
Graph/: matrixGraph.c  matrixGraph.h  matrixGraphWeighted.c  matrixGraphWeighted.h
HashTable/: hash.c  hash.h
Heap/: maxHeap.c  maxHeap.h  minHeap.c  minHeap.h
LinkedList/: doublyLinkedList.c  doublyLinkedList.h  singlyLinkedList.c  singlyLinkedList.h
Queue/: circularQueue.c  circularQueue.h  linearQueue.c  linearQueue.h
Stack/: dynamicSizeStack.c  dynamicSizeStack.h  fixedSizeStack.c  fixedSizeStack.h  stack.c
StackImplementation/: infixToPostfix.c  postfixEvaluation.c
Tree/: AVLTree.c  AVLTree.h  BinarySearchTree.c  BinarySearchTree.h  binarySearchTree.c  binarySearchTree.h
